Update GS to 2.9.1, update Tomcat to 9 and change to openJDK